--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   font-weight: 100;
   height: 100%;
   justify-content: center;
-  margin: 0 0 0 100px;
+  margin: 0 0 0 10%;
 }
 
 .main-container {
