add gitlab link

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .main-container {
   width: 80%;
-  max-width: 600px;
+  max-width: 700px;
 }
 
 header {
@@ -100,6 +100,10 @@ section {
   margin-right: 10px;
   padding-top: 4px;
   width: 27px;
+}
+
+.icon.gitlab::before {
+  content: url(images/gitlab-icon-1-color-black-rgb.svg);
 }
 
 .icon.github::before {
